Fixed <hr> element at bottom of form on booking page not displaying properly on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -2338,6 +2338,7 @@ hr {
   }
   .booking .container form .col-md-12.checkbox {
     margin-top: 20px;
+    margin-bottom: 50px;
   }
   .input-daterange {
     width: 100% !important;
